bin/testsuite/tests/compiler/src/errors/compiler3243.swg
#global testerror "Err0232"

namespace A
{
}

struct A
{
}

impl A
{
    mtd toto()
    {
    }
}